--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
   <body>
     <button onclick="Puck.setTime()"> Set Time</button>
+    <button onclick="Puck.wrote("Bangle.buzz()\n)">Make Buzz</button>
+    <button onclick="writeFile()">Write File</button>
+    <button onclick="readFile()">Read File</button>
+    <p id = "contents"> Nothing Here</p>
     <script src="https:/www/puck/js/com/puck.js"></script>
+    <script>
+      function writeFile() {
+        Puck.eval('require("Storage").write("a_file","Hello World")\n');
+      }
+      function readFile() {
+        Puck.write('require("Storage").read("a_file")',function(data) {
+          document.getElementById("contents".innerHTML = JSON.stringify(data);
+        });        
+      }
+    </script>
   </body>
 </html>
